--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-stream-api",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -48,6 +48,7 @@
     "@types/bluebird": "^3.5.20",
     "@types/eventemitter3": "^2.0.2",
     "@types/node": "^10.3.3",
+    "@types/sinon": "^5.0.1",
     "ava": "^1.0.0-beta.6",
     "cross-env": "^5.2.0",
     "eventemitter3": "^3.1.0",
@@ -56,7 +57,8 @@
     "npm-run-all": "^4.1.3",
     "pubsub-to-stream-api": "^0.1.0",
     "rimraf": "^2.6.2",
-    "ts-node": "^6.1.2",
+    "sinon": "^6.0.1",
+    "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "tslint-rules-bunch": "^0.0.4",
     "typescript": "^2.9.2"
