--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
   },
   "dependencies": {
     "deserialize-error": "^0.0.3",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.2.2",
     "serializerr": "^1.0.3",
     "tslib": "^1.9.2",
     "uuid-browser": "^3.1.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.20",
+    "@types/bluebird": "^3.5.22",
     "@types/eventemitter3": "^2.0.2",
-    "@types/node": "^10.3.3",
+    "@types/node": "^10.5.2",
     "@types/sinon": "^5.0.1",
     "ava": "^1.0.0-beta.6",
     "cross-env": "^5.2.0",
@@ -55,9 +55,9 @@
     "maths.ts": "^0.0.8",
     "node-http-ping": "^0.3.1",
     "npm-run-all": "^4.1.3",
-    "pubsub-to-stream-api": "^0.1.0",
+    "pubsub-to-stream-api": ">=0.2.0",
     "rimraf": "^2.6.2",
-    "sinon": "^6.0.1",
+    "sinon": "^6.1.3",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "tslint-rules-bunch": "^0.0.4",
