--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ environment:
 install:
   - ps: Install-Product node $env:nodejs_version
   - yarn install
+  - yarn add rxjs@6
 build: off
 test_script:
   - node --version
