--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-stream-api",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "deserialize-error": "^0.0.3",
+    "jsan": "^3.1.10",
     "serializerr": "^1.0.3",
     "tslib": "^1.9.2",
     "uuid-browser": "^3.1.0"
@@ -58,6 +59,7 @@
     "maths.ts": "^0.0.8",
     "node-http-ping": "^0.3.1",
     "npm-run-all": "^4.1.3",
+    "rewiremock": "^3.7.7",
     "rimraf": "^2.6.2",
     "sinon": "^6.2.0",
     "ts-node": "^7.0.1",
