--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-stream-api",
-  "version": "3.4.0",
+  "version": "4.0.0-beta.1",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
