api provider observable unsubscribe on "finishPromise" client resolving

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-stream-api",
-  "version": "4.0.0-beta.2",
+  "version": "4.0.0-beta.3",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -53,20 +53,20 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.25",
-    "@types/node": "^10.12.15",
-    "@types/sinon": "^7.0.0",
-    "ava": "^1.0.0-rc.2",
+    "@types/node": "^10.12.18",
+    "@types/sinon": "^7.0.3",
+    "ava": "^1.0.1",
     "cross-env": "^5.2.0",
     "eventemitter3": "^3.1.0",
     "install-peers": "^1.0.3",
     "maths.ts": "^0.0.8",
     "node-http-ping": "^0.3.1",
     "npm-run-all": "^4.1.5",
-    "rewiremock": "^3.12.3",
-    "rimraf": "^2.6.2",
+    "rewiremock": "^3.13.0",
+    "rimraf": "^2.6.3",
     "sinon": "^7.2.2",
     "ts-node": "^7.0.1",
-    "tslint": "^5.10.0",
+    "tslint": "^5.12.0",
     "tslint-rules-bunch": "^0.0.7",
     "typescript": "^3.2.2"
   }
