--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
   - nodejs_version: "10"
 install:
   - ps: Install-Product node $env:nodejs_version
-  - yarn install
+  - yarn --pure-lockfile
   - yarn add rxjs@6
 build: off
 test_script:
