--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-stream-api",
-  "version": "5.0.0",
+  "version": "5.0.0-beta1",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -11,22 +11,22 @@
     "stream",
     "api"
   ],
-  "main": "./dist/index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "example": "npm-run-all dist example:start",
-    "example:test": "cross-env TS_NODE_PROJECT=./src/example/tsconfig.json ava --verbose \"./src/example/**/*.{spec,test}.ts\"",
-    "example:start": "cross-env TS_NODE_PROJECT=./src/example/tsconfig.json ./node_modules/.bin/ts-node src/example/readme/index.ts",
+    "example": "npm-run-all lib example:run",
     "example:compile": "tsc --listEmittedFiles -p ./src/example/tsconfig.json --outDir ./output",
     "example:compile:watch": "tsc -w -p ./src/example/tsconfig.json --outDir ./output",
+    "example:run": "cross-env TS_NODE_PROJECT=./src/example/tsconfig.json ts-node -r tsconfig-paths/register src/example/readme",
+    "example:test": "cross-env TS_NODE_PROJECT=./src/example/tsconfig.json ava --verbose \"./src/example/**/*.{spec,test}.ts\"",
+    "lib": "npm-run-all lib:clean lint lib:compile test",
+    "lib:clean": "rimraf ./lib",
     "lib:compile": "tsc --listEmittedFiles -p ./src/lib/tsconfig.json",
     "lib:compile:watch": "tsc -w -p ./src/lib/tsconfig.json",
-    "output:clean": "rimraf ./output",
-    "dist:clean": "rimraf ./dist",
-    "dist": "npm-run-all dist:clean lint lib:compile test",
-    "lint:lib": "tslint -p ./src/lib/tsconfig.json -c ./tslint.json \"./src/{lib,@types}/**/*.ts\"",
-    "lint:example": "tslint -p ./src/example/tsconfig.json -c ./src/example/tslint.json \"./src/example/**/*.ts\"",
-    "lint:test": "tslint -p ./test/tsconfig.json -c ./test/tslint.json \"./test/**/*.ts\"",
     "lint": "npm-run-all lint:lib lint:test lint:example",
+    "lint:example": "tslint -p ./src/example/tsconfig.json -c ./src/example/tslint.json \"./src/example/**/*.ts\"",
+    "lint:lib": "tslint -p ./src/lib/tsconfig.json -c ./tslint.json \"./src/{lib,@types}/**/*.ts\"",
+    "lint:test": "tslint -p ./test/tsconfig.json -c ./test/tslint.json \"./test/**/*.ts\"",
+    "output:clean": "rimraf ./output",
     "test": "cross-env TS_NODE_PROJECT=./test/tsconfig.json ava --verbose \"./test/**/*.{spec,test}.ts\""
   },
   "ava": {
@@ -35,7 +35,8 @@
       "ts"
     ],
     "require": [
-      "ts-node/register"
+      "ts-node/register",
+      "tsconfig-paths/register"
     ]
   },
   "peerDependencies": {
@@ -49,19 +50,26 @@
     "uuid-browser": "^3.1.0"
   },
   "devDependencies": {
+    "@email-securely-app/import-sort-style": "0.1.0",
     "@types/bluebird": "^3.5.26",
     "@types/node": "^12.0.0",
     "@types/sinon": "^7.0.11",
+    "@types/tcp-ping": "0.1.0",
     "ava": "^1.4.1",
     "cross-env": "^5.2.0",
+    "husky": "2.2.0",
+    "import-sort-cli": "6.0.0",
+    "import-sort-parser-typescript": "6.0.0",
     "install-peers": "^1.0.3",
+    "lint-staged": "8.1.6",
     "maths.ts": "^0.0.8",
-    "node-http-ping": "^0.3.1",
     "npm-run-all": "^4.1.5",
     "rewiremock": "^3.13.6",
     "rimraf": "^2.6.3",
     "sinon": "^7.3.2",
+    "tcp-ping": "0.1.1",
     "ts-node": "^8.1.0",
+    "tsconfig-paths": "3.8.0",
     "tslint": "^5.16.0",
     "tslint-rules-bunch": "^0.0.7",
     "typescript": "^3.4.5"
