--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
       "es5",
       "es2015"
     ],
-    "baseUrl": "./src/lib",
-    "outDir": "./dist",
+    "baseUrl": ".",
+    "outDir": "./lib",
     "typeRoots": [
       "./node_modules/@types",
       "./@types"
