v5 prep: simplify the code
* prefer simple subscribing for calls processing case, so dropping custom map-based subscribers cache
* for internal use prefer "readonly" TS prop over Object.freeze as TS already ensures immutability at compile-time
* complete "./src/lib/model.ts:ScanService" type

--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
       "tsconfig-paths/register"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "peerDependencies": {
     "rxjs": "^6.5.2"
   },
