--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,8 +1,8 @@
 {
   "linters": {
     "*.ts": [
-      "yarn run import-sort --write",
-      "yarn tslint -p ./tsconfig.json --fix",
+      "npx import-sort --write",
+      "npx tslint -p ./tsconfig.json --fix",
       "git add"
     ]
   }
