--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 # https://docs.travis-ci.com/user/customizing-the-build/
 
-branches:
-  only:
-    - master
+if: tag IS blank
 os:
   - linux
   - osx
