v5 prep: simplify api definition structure
* See the old and new API definition formats:
  * v1-v4: interface ApiDefinition { method: Model.Action<string, { result: number }> }
  * v5-beta1+ (result type container observable/promise preserved in runtime): const ApiDefinition = { method: (arg1: string) => ActionReturnType.Observable<{ result: number }>() }
  * v5-beta3+ (result type container observable/promise preserved in runtime): const ApiDefinition = { method: ActionType.Observable<[string], { result: number }>() }

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # https://docs.travis-ci.com/user/customizing-the-build/
 
-if: tag IS blank
+branches:
+  only:
+    - master
 os:
   - linux
   - osx
