--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "5.0.0-beta2",
+  "version": "5.0.0-beta3",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -58,26 +58,26 @@
     "uuid-browser": "^3.1.0"
   },
   "devDependencies": {
-    "@email-securely-app/import-sort-style": "0.1.0",
+    "@email-securely-app/import-sort-style": "^0.1.0",
     "@types/bluebird": "^3.5.26",
     "@types/node": "^12.0.0",
     "@types/sinon": "^7.0.11",
-    "@types/tcp-ping": "0.1.0",
+    "@types/tcp-ping": "^0.1.0",
     "ava": "^1.4.1",
     "cross-env": "^5.2.0",
-    "husky": "2.2.0",
-    "import-sort-cli": "6.0.0",
-    "import-sort-parser-typescript": "6.0.0",
+    "husky": "^2.2.0",
+    "import-sort-cli": "^6.0.0",
+    "import-sort-parser-typescript": "^6.0.0",
     "install-peers": "^1.0.3",
-    "lint-staged": "8.1.6",
+    "lint-staged": "^8.1.6",
     "maths.ts": "^0.0.8",
     "npm-run-all": "^4.1.5",
     "rewiremock": "^3.13.6",
     "rimraf": "^2.6.3",
     "sinon": "^7.3.2",
-    "tcp-ping": "0.1.1",
+    "tcp-ping": "^0.1.1",
     "ts-node": "^8.1.0",
-    "tsconfig-paths": "3.8.0",
+    "tsconfig-paths": "^3.8.0",
     "tslint": "^5.16.0",
     "tslint-rules-bunch": "^0.0.7",
     "typescript": "^3.4.5"
