--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "5.1.2",
+  "version": "5.1.3",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -50,8 +50,7 @@
     "jsan": "^3.1.13",
     "pure-uuid": "^1.5.8",
     "serializerr": "^1.0.3",
-    "tslib": "^1.10.0",
-    "uuid": "^3.3.3"
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@email-securely-app/import-sort-style": "^0.1.0",
@@ -59,7 +58,6 @@
     "@types/node": "^12.12.21",
     "@types/sinon": "^7.5.1",
     "@types/tcp-ping": "^0.1.0",
-    "@types/uuid": "3.4.6",
     "ava": "^1.4.1",
     "cross-env": "^6.0.3",
     "husky": "^3.1.0",
