enable support for "SubscribableLike" action type
* "SubscribableLike" action returns "{subscribe: Function}"-like result so the "object" and "function" types are serializable by @electron 's "contextBridge" thing, see https://www.electronjs.org/docs/api/context-bridge

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,6 @@
 {
   "*.ts": [
     "npx import-sort --write",
-    "npx tslint -p ./tsconfig.json --fix",
-    "git add"
+    "npx tslint -p ./tsconfig.json --fix"
   ]
 }
