--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "5.1.3",
+  "version": "5.2.0-beta.1",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -48,7 +48,7 @@
   "dependencies": {
     "deserialize-error": "^0.0.3",
     "jsan": "^3.1.13",
-    "pure-uuid": "^1.5.8",
+    "pure-uuid": "^1.6.0",
     "serializerr": "^1.0.3",
     "tslib": "^1.10.0"
   },
@@ -59,24 +59,24 @@
     "@types/sinon": "^7.5.1",
     "@types/tcp-ping": "^0.1.0",
     "ava": "^1.4.1",
-    "cross-env": "^6.0.3",
-    "husky": "^3.1.0",
+    "cross-env": "^7.0.0",
+    "husky": "^4.2.1",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "install-peers": "^1.0.3",
-    "lint-staged": "^9.5.0",
+    "lint-staged": "^10.0.7",
     "maths.ts": "^0.0.8",
     "npm-run-all": "^4.1.5",
     "rewiremock": "^3.13.9",
-    "rimraf": "^3.0.0",
-    "sinon": "^7.5.0",
+    "rimraf": "^3.0.1",
+    "sinon": "^8.1.1",
     "tcp-ping": "^0.1.1",
-    "ts-node": "^8.5.4",
+    "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.1",
+    "tslint": "^6.0.0",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-rules-bunch": "^0.0.8",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.5"
   }
 }
