--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "5.2.0-beta.1",
+  "version": "5.2.0-beta.2",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -43,7 +43,7 @@
     ]
   },
   "peerDependencies": {
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.x"
   },
   "dependencies": {
     "deserialize-error": "^0.0.3",
