--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "rxjs": "^6.x"
   },
   "dependencies": {
+    "@vladimiry/serialize-error": "^5.0.0",
     "jsan": "^3.1.13",
     "pure-uuid": "^1.6.0",
-    "serialize-error": "https://github.com/vladimiry-playground/serialize-error#a2c28c7f7f4ce409780ac7c6918d8ea875934a43",
     "tslib": "^1.11.0"
   },
   "devDependencies": {
