--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "5.2.0-beta.5",
+  "version": "5.2.0-beta.6",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -51,9 +51,9 @@
     "rxjs": "^6.x"
   },
   "dependencies": {
-    "@vladimiry/serialize-error": "^5.0.0",
     "jsan": "^3.1.13",
     "pure-uuid": "^1.6.0",
+    "serialize-error": "^6.0.0",
     "tslib": "^1.11.0"
   },
   "devDependencies": {
