--- a/package.json
+++ b/package.json
@@ -57,30 +57,30 @@
     "tslib": "^1.11.0"
   },
   "devDependencies": {
-    "@email-securely-app/import-sort-style": "^0.1.0",
     "@types/bluebird": "^3.5.29",
-    "@types/node": "^12.12.21",
-    "@types/sinon": "^7.5.1",
-    "@types/tcp-ping": "^0.1.0",
-    "ava": "^3.5.0",
+    "@types/node": "^13.11.1",
+    "@types/sinon": "^9.0.0",
+    "@types/tcp-ping": "^0.1.1",
+    "@vladimiry/import-sort-style": "0.1.1",
+    "ava": "^3.7.0",
     "cross-env": "^7.0.0",
     "husky": "^4.2.3",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "install-peers": "^1.0.3",
-    "lint-staged": "^10.0.7",
+    "lint-staged": "^10.1.4",
     "maths.ts": "^0.0.8",
     "npm-run-all": "^4.1.5",
     "rewiremock": "^3.13.9",
     "rimraf": "^3.0.2",
-    "sinon": "^9.0.0",
+    "sinon": "^9.0.2",
     "tcp-ping": "^0.1.1",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^6.0.0",
+    "tslint": "^6.1.1",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-rules-bunch": "^0.0.8",
+    "tslint-rules-bunch": "^1.0.0",
     "typescript": "^3.8.2"
   }
 }
