--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "5.2.0",
+  "version": "5.2.1",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -61,7 +61,7 @@
     "@types/node": "^13.11.1",
     "@types/sinon": "^9.0.0",
     "@types/tcp-ping": "^0.1.1",
-    "@vladimiry/import-sort-style": "0.1.1",
+    "@vladimiry/import-sort-style": "^0.1.1",
     "ava": "^3.7.0",
     "cross-env": "^7.0.0",
     "husky": "^4.2.3",
