--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "api"
   ],
   "main": "./lib/index.js",
-  "engines": {
-    "node": ">=8"
-  },
   "scripts": {
     "example": "npm-run-all lib example:run",
     "example:compile": "tsc --listEmittedFiles -p ./src/example/tsconfig.json --outDir ./output",
@@ -30,7 +27,8 @@
     "lint:lib": "tslint -p ./src/lib/tsconfig.json -c ./tslint.json \"./src/{lib,@types}/**/*.ts\"",
     "lint:test": "tslint -p ./test/tsconfig.json -c ./test/tslint.json \"./test/**/*.ts\"",
     "output:clean": "rimraf ./output",
-    "test": "cross-env TS_NODE_PROJECT=./test/tsconfig.json ava --verbose \"./test/**/*.{spec,test}.ts\""
+    "test": "cross-env TS_NODE_PROJECT=./test/tsconfig.json ava --verbose \"./test/**/*.{spec,test}.ts\"",
+    "prepare": "husky install"
   },
   "ava": {
     "extensions": [
@@ -52,35 +50,40 @@
   },
   "dependencies": {
     "jsan": "^3.1.13",
-    "pure-uuid": "^1.6.0",
-    "serialize-error": "^6.0.0",
-    "tslib": "^1.11.0"
+    "pure-uuid": "^1.6.2",
+    "serialize-error": "^8.0.1",
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.29",
+    "@types/bluebird": "^3.5.33",
+    "@types/jsan": "3.1.0",
     "@types/node": "^13.11.1",
-    "@types/sinon": "^9.0.0",
+    "@types/sinon": "^9.0.11",
     "@types/tcp-ping": "^0.1.1",
     "@vladimiry/import-sort-style": "^0.1.1",
-    "ava": "^3.7.0",
-    "cross-env": "^7.0.0",
-    "husky": "^4.2.3",
+    "ava": "^3.15.0",
+    "cross-env": "^7.0.3",
+    "husky": "^6.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "install-peers": "^1.0.3",
-    "lint-staged": "^10.1.4",
+    "lint-staged": "^10.5.4",
     "maths.ts": "^0.0.8",
     "npm-run-all": "^4.1.5",
-    "rewiremock": "^3.13.9",
+    "rewiremock": "^3.14.3",
     "rimraf": "^3.0.2",
-    "sinon": "^9.0.2",
+    "sinon": "^10.0.0",
     "tcp-ping": "^0.1.1",
-    "ts-node": "^8.8.2",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^6.1.1",
+    "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-rules-bunch": "^1.0.0",
-    "typescript": "^3.8.2"
+    "typescript": "^4.2.3"
+  },
+  "resolutions": {
+    "*/**/tslib": "^2",
+    "import-sort-cli/yargs/y18n": "4.0.1"
   }
 }
