--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "7.0.0-alpha2",
+  "version": "7.0.0-beta1",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -70,7 +70,7 @@
     "import-sort-parser-typescript": "^6.0.0",
     "lint-staged": "^10.5.4",
     "maths.ts": "^0.0.8",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^5.0.2",
     "rewiremock": "^3.14.3",
     "rimraf": "^3.0.2",
     "sinon": "^10.0.0",
@@ -85,6 +85,7 @@
   },
   "resolutions": {
     "*/**/tslib": "^2.x",
+    "ava/read-pkg/normalize-package-data": "^3.0.2",
     "import-sort-cli/yargs": "^17.x",
     "import-sort-parser-typescript/typescript": "^4.x"
   }
