--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "7.0.0-beta1",
+  "version": "7.0.0",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -60,7 +60,7 @@
     "@types/bluebird": "^3.5.33",
     "@types/jsan": "3.1.0",
     "@types/node": "^14.14.37",
-    "@types/sinon": "^9.0.11",
+    "@types/sinon": "^10.0.0",
     "@types/tcp-ping": "^0.1.1",
     "@vladimiry/import-sort-style": "^0.1.4",
     "ava": "^3.15.0",
@@ -68,7 +68,7 @@
     "husky": "^6.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^11.0.0",
     "maths.ts": "^0.0.8",
     "npm-run-all2": "^5.0.2",
     "rewiremock": "^3.14.3",
