--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubsub-to-rpc-api",
-  "version": "7.0.1",
+  "version": "7.1.0",
   "description": "Converting publish-subscribe/IPC-like interaction model into the request/response model powered by RxJS",
   "author": "Vladimir Yakovlev <dev.vladimir.y@gmail.com> (https://github.com/vladimiry)",
   "license": "MIT",
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "jsan": "^3.1.13",
+    "msgpackr": "^1.3.4",
     "pure-uuid": "^1.6.2",
     "rxjs": "^7.1.0",
     "serialize-error": "^8.0.1",
