--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "pure-uuid": "^1.6.2",
     "rxjs": "^7.1.0",
     "serialize-error": "^8.0.1",
-    "tslib": "^2.1.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.35",
-    "@types/jsan": "3.1.0",
+    "@types/jsan": "^3.1.0",
     "@types/node": "^14.14.37",
     "@types/sinon": "^10.0.2",
     "@types/tcp-ping": "^0.1.2",
@@ -82,7 +82,7 @@
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-rules-bunch": "^1.0.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.4"
   },
   "resolutions": {
     "*/**/tslib": "^2.x",
