--- a/package.json
+++ b/package.json
@@ -63,12 +63,10 @@
     "@types/node": "^14.14.37",
     "@types/sinon": "^10.0.8",
     "@types/tcp-ping": "^0.1.3",
-    "@vladimiry/import-sort-style": "^0.1.4",
     "ava": "^4.0.1",
     "cross-env": "^7.0.3",
+    "format-imports": "^2.4.5",
     "husky": "^7.0.4",
-    "import-sort-cli": "^6.0.0",
-    "import-sort-parser-typescript": "^6.0.0",
     "lint-staged": "^12.2.2",
     "maths.ts": "^0.0.8",
     "npm-run-all2": "^5.0.2",
@@ -86,8 +84,6 @@
   },
   "resolutions": {
     "*/**/tslib": "^2.x",
-    "*/**/typescript": "^4.x",
-    "import-sort-cli/yargs": "^17.x",
-    "import-sort-cli/globby": "^11.x"
+    "*/**/typescript": "^4.x"
   }
 }
