--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": "git@github.com:vladimiry/pubsub-to-rpc-api.git",
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "keywords": [
     "pubsub",
@@ -23,8 +23,10 @@
     "example:test": "cross-env TS_NODE_PROJECT=./src/example/tsconfig.json ava --verbose \"./src/example/**/*.{spec,test}.ts\"",
     "lib": "npm-run-all lib:clean lint lib:compile test",
     "lib:clean": "rimraf ./lib",
-    "lib:compile": "tsc --listEmittedFiles -p ./src/lib/tsconfig.json",
-    "lib:compile:watch": "tsc -w -p ./src/lib/tsconfig.json",
+    "lib:compile:1": "ts-patch install",
+    "lib:compile:2": "esbuild node_modules/serialize-error/index.js  --bundle --platform=node --outfile=lib/node_modules/serialize-error/index.js",
+    "lib:compile:3": "tsc --listEmittedFiles -p ./src/lib/tsconfig.json",
+    "lib:compile": "npm-run-all lib:compile:1 lib:compile:2 lib:compile:3",
     "lint": "npm-run-all lint:lib lint:test lint:example",
     "lint:example": "tslint -p ./src/example/tsconfig.json -c ./src/example/tslint.json \"./src/example/**/*.ts\"",
     "lint:lib": "tslint -p ./src/lib/tsconfig.json -c ./tslint.json \"./src/{lib,@types}/**/*.ts\"",
@@ -51,36 +53,39 @@
   },
   "dependencies": {
     "jsan": "^3.1.14",
-    "msgpackr": "^1.5.2",
+    "msgpackr": "^1.6.2",
     "pure-uuid": "^1.6.2",
-    "rxjs": "^7.5.2",
-    "serialize-error": "^8.0.1",
-    "tslib": "^2.3.1"
+    "rxjs": "^7.5.6",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
     "@types/jsan": "^3.1.2",
-    "@types/node": "^14.14.37",
-    "@types/sinon": "^10.0.8",
+    "@types/node": "^18.7.16",
+    "@types/sinon": "^10.0.13",
     "@types/tcp-ping": "^0.1.3",
-    "ava": "^4.0.1",
+    "ava": "^4.3.3",
     "cross-env": "^7.0.3",
-    "format-imports": "^2.4.5",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.2.2",
+    "esbuild": "^0.15.7",
+    "format-imports": "^3.1.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "maths.ts": "^0.0.8",
-    "npm-run-all2": "^5.0.2",
+    "npm-run-all2": "^6.0.2",
     "rewiremock": "^3.14.3",
     "rimraf": "^3.0.2",
-    "sinon": "^12.0.1",
+    "serialize-error": "^11.0.0",
+    "sinon": "^14.0.0",
     "tcp-ping": "^0.1.1",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
+    "ts-node": "^10.9.1",
+    "ts-patch": "^2.0.2",
+    "tsconfig-paths": "^4.1.0",
     "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-rules-bunch": "^1.0.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.8.3",
+    "typescript-transform-paths": "^3.3.1"
   },
   "resolutions": {
     "*/**/tslib": "^2.x",
