--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "lint:lib": "tslint -p ./src/lib/tsconfig.json -c ./tslint.json \"./src/{lib,@types}/**/*.ts\"",
     "lint:test": "tslint -p ./test/tsconfig.json -c ./test/tslint.json \"./test/**/*.ts\"",
     "output:clean": "rimraf ./output",
-    "test": "cross-env TS_NODE_PROJECT=./test/tsconfig.json ava --verbose \"./test/**/*.{spec,test}.ts\"",
-    "prepare": "husky install"
+    "test": "cross-env TS_NODE_PROJECT=./test/tsconfig.json ava --verbose \"./test/**/*.{spec,test}.ts\""
   },
   "ava": {
     "extensions": [
@@ -68,10 +67,8 @@
     "cross-env": "^7.0.3",
     "esbuild": "^0.19.10",
     "format-imports": "^4.0.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^15.2.0",
     "maths.ts": "^0.0.8",
-    "npm-run-all2": "^6.0.2",
+    "npm-run-all2": "6.0.5",
     "rewiremock": "^3.14.3",
     "rimraf": "^5.0.5",
     "serialize-error": "^11.0.0",
